[package]
name = "link-boot"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "macros for link mod to boot section"
authors = ["周睿 <zrufo747@outlook.com>"]
keywords = ["link", "boot", "macro"]
repository = "https://github.com/rcore-os/link-boot"
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
